[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -160.0
offset_right = 240.0
offset_bottom = 160.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
offset_left = 12.0
offset_top = 12.0
offset_right = 468.0
offset_bottom = 308.0
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBox"]
text = "NECROPIXEL TACTICS"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
text = "Continue"

[node name="NewGameButton" type="Button" parent="Panel/VBox"]
text = "New Game (Van Saar)"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
text = "Quit"
